check point 10:33 26/04/2025